--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,32 @@
 name: Deploy VitePress to GitHub Pages
 
+# Cho phép kích hoạt workflow thủ công
 on:
-  push:
-    branches:
-      - main  # Thay "main" bằng branch chính của bạn
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      # Bước 1: Lấy mã nguồn của repo
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Bước 2: Cài đặt Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '18'  # Đảm bảo Node.js >= 16
 
+      # Bước 3: Cài đặt các dependencies
       - name: Install dependencies
         run: npm ci
 
+      # Bước 4: Build dự án VitePress
       - name: Build VitePress site
         run: npm run build
 
+      # Bước 5: Deploy lên GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
